--- a/src/server/package.json
+++ b/src/server/package.json
@@ -9,7 +9,9 @@
     "build": "tsc -p tsconfig.json"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "sequelize": "^6.37.7",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
